--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,28 @@
 body {
   background-color: white;
 }
-.change::first-letter {color: blue;}
-.updatecard,
-.carousel-caption,
+.change::first-letter {
+  color: blue;
+}
 .welcome a,
-h2,
-.carousel-caption button,
-.collapse form button,
-.logmodal button,
-.logmodal .modal-header,
-.allcards a {
+h2,.carousel-caption button,.collapse form button,.logmodal button,.logmodal .modal-header,.allcards a {
   background-color: #72bcf4;
 }
 .updatecar {
-    border: 1px solid  #72bcf4;
-
+  border: 1px solid #72bcf4;
 }
-.updatecar h5 , .updatecar p {
-    color: #2ea2fb;
+.updatecar p {
+  color: #2ea2fb;
 }
-
-.write button,
-.write textarea {
+.updatecar h5 {
+  color: #048ef7;
+}
+.write button {
   background-color: #9ccff4;
 }
-h2,
-h3,
-h5,.head span {
+h2,h3,h5,.head span {
   color: #084e99;
 }
-.carousel-caption {
-  background-color: rgba(179, 212, 250, 0.7);
-}
-
 .btn-group button {
   background-color: #b3d4fa;
 }
@@ -43,49 +32,48 @@ p {
 .doc {
   margin-top: -15px;
 }
+.u-img,.u-img2 {width: 400px;}
 .u-img {
   clip-path: polygon(0 0, 100% 0%, 100% 100%, 20% 100%);
-  
-  width: 400px;
 }
-
 .u-img2 {
   clip-path: polygon(0 0, 100% 0%, 80% 100%, 0 100%);
-  
-  width: 400px;
 }
 .popular .allcards .pop-card {
   position: relative;
 }
-.popular .allcards .pop-card::after,
-.popular .allcards .pop-card::before {
+.popular .allcards .pop-card::after,.popular .allcards .pop-card::before {
   content: "";
   position: absolute;
-  top: 0;
-  right: 0;
   width: 0px;
   height: 0px;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.07);
   transition: 0.7s;
 }
-.popular .allcards .pop-card::before {
+.popular .allcards .pop-card::after {
+  top: 0;
   left: 0;
 }
-.popular .allcards .pop-card:hover::after,
-.popular .allcards .pop-card:hover::before {
+.popular .allcards .pop-card::before {
+  bottom: 0;
+  right: 0;
+}
+.popular .allcards .pop-card:hover::after,.popular .allcards .pop-card:hover::before {
   width: 100%;
   height: 100%;
 }
-.doctor {
+.doctor,.doc-thx {
   transition: 0.5s;
 }
 .doctor:hover {
   transform: scale(0.9);
-  opacity: 0.9;
+  opacity: 0.87;
+}
+.doctor:hover .doc-thx {
+  transform: translateY(25px);
 }
 @media (max-width: 768px) {
-  .u-img,
-  .u-img2 {
+  .u-img,.u-img2 {
     clip-path: none;
     height: 200px;
     width: 100%;
@@ -96,30 +84,48 @@ p {
   .updatecard .p-lg-5 {
     overflow: hidden;
   }
+  .updatecard:hover img {
+    transform: scale(1);
+  }
 }
+.f-icon , .j-icon {color: white;}
 .f-icon {
-  background-color: #37a2f3;
-  color: #084e99;
+  background-color: #048ef7;
 }
-.j-icon {background-color: #084e99; color: #37a2f3;}
-.popover{
-background-color: transparent;
+.j-icon {
+  background-color: #084e99;
+}
+.popover {
+  background-color: transparent;
+}
+.popover-body, .tooltip-inner {
+  color: #084e99;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 22px;
+
 }
 .popover-body {
   background-color: white;
-  color: #084e99;
-  border-radius:  10px ;
-  padding:  10px;
-  font-size: 22px;
-  
-}
-.popover .popover-arrow ,.tooltip .tooltip-arrow {
+  }
+.popover .popover-arrow,.tooltip .tooltip-arrow {
   display: none;
 }
-.tooltip-inner{
-  font-size: 22px;
+.tooltip-inner {
   background-color: rgba(179, 212, 250, 0.7);
-  color: #084e99;
-border-radius: 10px;
-padding: 10px; 
 }
+.updatecard:hover .p-lg-5 .line {
+  animation: grow 1s forwards linear;
+}
+@keyframes grow {
+  from {
+    height: 2px;
+    width: 0;
+  }
+  to {
+    width: 80px;
+  }
+}
+.updatecard {overflow: hidden;}
+.updatecard img {transition: 0.5s;}
+.updatecard:hover img {transform: scale(1.05);}
